src/objects/PS_WOLI_Template__c.object
<CustomObject>
    <fields>
        <fullName>Copy_WO_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy WO Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Template__c</fullName>
        <label>Work Order Template</label>
        <referenceTo>PS_Work_Order_Template__c</referenceTo>
        <relationshipLabel>WOLI Templates</relationshipLabel>
        <relationshipName>WOLI_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WOLI Template</label>
    <nameField>
        <displayFormat>WOLI_TMP_{00000}</displayFormat>
        <label>WOLI Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WOLI Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>